Web SDK fix bell dialog divider line not perfectly aligning.

--- a/src/bell/bell.scss
+++ b/src/bell/bell.scss
@@ -415,7 +415,7 @@ $sizes: (
 
                         .divider {
                             border-bottom: 1px solid $dialog-border-color;
-                            margin: #{$size-amount * 0.1} #{-($size-amount * 0.3)};
+                            margin: 0.25em -0.93em;
                         }
 
                         .kickback {
